# bounty-challenge

./: Cargo.toml  README.md  bounty_challenge.wasm
.github/workflows/: release.yml
bins/bounty-cli/: Cargo.toml
bins/bounty-cli/src/: main.rs
bins/bounty-cli/src/views/: mod.rs
src/: github_sync.rs  lib.rs  routes.rs  scoring.rs  types.rs  validation.rs
src/api/: handlers.rs
src/storage/: bounty_storage.rs
