[workspace]
members = [
    ".",
    "bins/bounty-cli",
]
resolver = "2"

[package]
name = "bounty-challenge"
version = "0.1.0"
edition = "2021"
description = "Bounty Challenge – WASM evaluation module for Platform Network"
authors = ["CortexLM"]
license = "Apache-2.0"
repository = "https://github.com/PlatformNetwork/bounty-challenge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
platform-challenge-sdk-wasm = { git = "https://github.com/PlatformNetwork/platform.git", branch = "main" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "1.3", default-features = false }
serde_json = "1.0.149"
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
