[package]
name = "bounty-cli"
version = "0.0.1"
edition = "2021"
description = "Interactive TUI for Bounty Challenge on Platform Network"
authors = ["CortexLM"]
license = "Apache-2.0"

[[bin]]
name = "bounty-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
sp-core = { version = "31.0", default-features = false, features = ["std"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
